--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "lyubishev-time-frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@vitejs/plugin-legacy": "^5.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-plugin-commonjs": "^0.10.1",
-    "vite-plugin-pwa": "^0.17.4",
-    "vite-tsconfig-paths": "^4.2.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "prettier": "^3.1.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
-  }
+    "name": "lyubishev-time-frontend",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "start": "serve -s dist",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "heroku-postbuild": "npm run build"
+    },
+    "dependencies": {
+        "@vitejs/plugin-legacy": "^5.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "serve": "^14.2.1",
+        "vite-plugin-commonjs": "^0.10.1",
+        "vite-plugin-pwa": "^0.17.4",
+        "vite-tsconfig-paths": "^4.2.3"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.43",
+        "@types/react-dom": "^18.2.17",
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "eslint": "^8.55.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "prettier": "^3.1.1",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.8"
+    }
 }
