--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     },
     "dependencies": {
         "@vitejs/plugin-legacy": "^5.2.0",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.21.1",
         "serve": "^14.2.1",
+        "sort-by": "^1.2.0",
         "vite-plugin-commonjs": "^0.10.1",
         "vite-plugin-pwa": "^0.17.4",
         "vite-tsconfig-paths": "^4.2.3"
