--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vite-plugin-commonjs": "^0.10.1",
         "vite-plugin-pwa": "^0.17.4",
         "vite-tsconfig-paths": "^4.2.3",
+        "yup": "^1.3.3",
         "zustand": "^4.4.7"
     },
     "devDependencies": {
