feat: add dnd for tags

--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
         "@mui/material": "^5.15.3",
         "@vitejs/plugin-legacy": "^5.2.0",
         "axios": "^1.6.4",
+        "dnd-core": "^16.0.1",
         "formik": "^2.4.5",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
+        "rdndmb-html5-to-touch": "^8.0.3",
         "react": "^18.2.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-dnd-multi-backend": "^8.0.3",
+        "react-dnd-touch-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.1",
         "serve": "^14.2.1",
