--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "@fontsource/roboto": "^5.0.8",
         "@mui/icons-material": "^5.15.3",
         "@mui/material": "^5.15.3",
+        "@mui/x-date-pickers": "^6.18.6",
         "@vitejs/plugin-legacy": "^5.2.0",
         "axios": "^1.6.4",
+        "dayjs": "^1.11.10",
         "dnd-core": "^16.0.1",
         "formik": "^2.4.5",
         "localforage": "^1.10.0",
@@ -42,6 +44,7 @@
         "zustand": "^4.4.7"
     },
     "devDependencies": {
+        "@biomejs/biome": "1.4.1",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
