--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@mui/x-date-pickers": "^6.18.6",
         "@vitejs/plugin-legacy": "^5.2.0",
         "axios": "^1.6.4",
+        "chart.js": "^4.4.1",
         "dayjs": "^1.11.10",
         "dnd-core": "^16.0.1",
         "formik": "^2.4.5",
@@ -28,6 +29,7 @@
         "match-sorter": "^6.3.1",
         "rdndmb-html5-to-touch": "^8.0.3",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
         "react-dnd-multi-backend": "^8.0.3",
