--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "start": "serve -s dist",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview",
-        "heroku-postbuild": "npm run build"
+        "preview": "vite preview"
     },
     "dependencies": {
         "@emotion/react": "^11.11.3",
